--- a/Modungji/Info.plist
+++ b/Modungji/Info.plist
@@ -7,6 +7,7 @@
 		<string>Pretendard-Bold.otf</string>
 		<string>Pretendard-Regular.otf</string>
 		<string>Pretendard-Medium.otf</string>
+		<string>Yeongdeok-Haeparang.otf</string>
 	</array>
 </dict>
 </plist>
