--- a/Modungji/App/Info.plist
+++ b/Modungji/App/Info.plist
@@ -29,6 +29,7 @@
 	<false/>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
+		<string>kakaokompassauth</string>
 		<string>kftc-bankpay</string>
 		<string>ispmobile</string>
 		<string>itms-apps</string>
