--- a/Modungji/App/Info.plist
+++ b/Modungji/App/Info.plist
@@ -21,7 +21,7 @@
 			<string>$(PRODUCT_NAME)</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>$(PRODUCT_NAME)</string>
+				<string>iamport</string>
 			</array>
 		</dict>
 	</array>
